--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "electron": "^2.0.2"
   },
   "dependencies": {
-    "bootstrap": "^4.1.1"
+    "bootstrap": "^4.1.1",
+    "request": "^2.87.0"
   }
 }
