--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "keybasesignup",
   "version": "0.0.1",
   "description": "signup for keybase using electron framework",
-  "main": "index.js",
+  "main": "main.js",
   "scripts": {
     "start": "electron ."
   },
@@ -13,6 +13,8 @@
   },
   "dependencies": {
     "bootstrap": "^4.1.1",
-    "request": "^2.87.0"
+    "crypto-browserify": "^3.12.0",
+    "request": "^2.87.0",
+    "triplesec": "^3.0.26"
   }
 }
