--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
   "dependencies": {
     "bootstrap": "^4.1.1",
     "crypto-browserify": "^3.12.0",
+    "mongodb": "^3.0.10",
+    "mongoose": "^5.1.6",
     "request": "^2.87.0",
     "triplesec": "^3.0.26"
   }
